# meshops-copilot

./: .env.example  .gitignore  Makefile  README.md  golden.json  pyproject.toml
config/: demo.example.yaml  local.example.yaml
config/prompts/: datahub_discovery.md  grafana_diagnostics.md  report.md  superset_stress.md  system.md  trino_stress_test.md
deploy/compose/: docker-compose.yaml
deploy/docker/: Dockerfile
docs/: architecture.md  configuration.md  demo-script.md  gemini-slides-prompt.md  skills.md
scenarios/superset/: concurrency.yaml  discovery.yaml  golden_report.yaml  workshop.yaml
scenarios/trino/: dashboard_like.yaml  discovery.yaml  high_concurrency.yaml  light.yaml  long_running.yaml
scripts/: generate-report.py  run-demo.sh  seed-fixtures.py
src/meshops_copilot/: __init__.py  main.py
src/meshops_copilot/agents/: base.py  governance_agent.py  meshops_agent.py  observability_agent.py  stress_agent.py
src/meshops_copilot/cli/: app.py
src/meshops_copilot/connectors/: datahub_mcp.py  grafana_mcp.py  kubernetes.py  loki.py  prometheus.py  (+2 more)
tests/: conftest.py
tests/fixtures/: grafana_metrics.json  superset_dashboards.json  trino_queries.json
tests/integration/: test_trino_connector.py
tests/unit/: conftest.py  test_config.py  test_dashboard_auditor.py  test_data_product_discovery.py  test_discovery.py  test_duplicate_detector.py  test_golden_report.py  test_noisy_neighbor.py  test_query_builder.py  test_report_writer.py  test_superset_discovery.py  test_superset_workload.py  test_trino_connector_auth.py  test_trino_workload.py
(+99 files in other folders)
