[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshops-copilot"
version = "0.1.0"
description = "AI-assisted data mesh operations — stress testing, diagnostics, discovery, and reporting"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }

dependencies = [
    "click>=8.1",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pydantic>=2.6",
    "httpx>=0.27",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.30",
    "anthropic>=0.28",
]
datahub = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "ipykernel>=6.29",
]

[project.scripts]
meshops = "meshops_copilot.cli.app:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/meshops_copilot"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
